<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ltHost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/page_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/name_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/email_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/phoneNo_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPhoneNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/TypeOfBeverageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/beverage_title"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/rgTypeOfBeverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdCoffee"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/coffee_radio"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rdTea"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/tea_radio"
                        android:textSize="15sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/additional_title"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/chkMilk"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/milk_checkbox"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/chkSugar"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/sugar_checkbox"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/SizeOfBeverageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/beveragesize_title"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/rgSizeOfBeverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdSmall"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/small_radio"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rdMedium"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/medium_radio"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/rdLarge"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/large_radio"
                        android:textSize="15sp" />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/addedflavour_title"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spnAddedFlavour"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/spn_text_border"
                    android:textSize="15sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/region_hint"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/acSelectRegion"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:paddingLeft="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/store_hint"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spnStore"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/spn_text_border"
                    android:textSize="15sp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/date_hint"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/btn_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>